# MCP-Unreal-Server

./: .gitignore  README.md  pyproject.toml
src/mcp_server_unreal/: get_class_info.py  remote_execution.py  server.py
src/unreal_class_visualization/: parse_json.py  unreal_class_hierarchy.html  visualize_hierarchy.py
